--- a/app/views/examples/_related_examples.html.erb
+++ b/app/views/examples/_related_examples.html.erb
@@ -17,15 +17,13 @@ This is expecting the following local variables:
   <<%=title_tag%>><%= title %>
   <% if editable and can_edit? %>
     <span class="edit-toggle">
-      <a href="<%= new_vertical_example_path vertical %>"
-        ><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Example"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button
-      ></a>
-	  <!-- MERGE THESE TWO PAGES
-      <a href="<%= vertical_example_index_path vertical %>"
-        ><button class="btn btn-sm btn-default">Add existing</button
-      ></a>
-    </span>
-	-->
+      <a href="<%= vertical_example_index_path vertical %>">
+		<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Link to Example">
+		  <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+		</button>
+	  </a>
+	  <!-- got merged into ^^ -->
+	  <%-# new_vertical_example_path vertical -%>
   <% end %>
   </<%=title_tag%>>
   <ul>
