Adding new assignment groups works.

--- a/app/views/assignment_groups/new.html.erb
+++ b/app/views/assignment_groups/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, "New Assignment Group Entry") %>
+<% provide(:title, "New Assignment Entry") %>
 <%= render template: 'assignment_groups/_modify_form', 
   locals: {action: assignment_groups_path, method: :post} %>
