Updated the advanced search box snippet to work with the new assignment model.

--- a/app/views/search/_advanced_search_box.html.erb
+++ b/app/views/search/_advanced_search_box.html.erb
@@ -71,13 +71,9 @@
   
   <div class="form-group">
     <label>Author:</label>
-    <input class="form-control" type="text" name="aq" value="<%= advanced_query_fields[:author] %>">
+    <input class="form-control" type="text" name="aq" value="<%= advanced_query_fields[:authors] %>">
   </div>
   
-  <div class="form-group">
-    <label>Assignment results:</label>
-    <input class="form-control" type="text" name="arq" value="<%= advanced_query_fields[:assignment_results] %>">
-  </div>
   
   <div class="form-group">
     <label>Learning curve:</label>
