--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,206 +1,298 @@
-<% provide(:title, @assignment.name) %>
+<% provide(:title, @assignment.assignment_group.name) %>
 <div class="container-fluid assignment-page" data-assignment-id="<%= @assignment.id %>">
   
-  <h1 class="name"><span class="name-text"><%= @assignment.name %></span>
-  <% if can_edit? %>
-	<button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
-	  Enable editing
-	</button>
-	<button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
-	  Disable editing
-	</button>
+  <h1 class="name"><span class="name-text"><%= @assignment.assignment_group.name %></span>
+    <% if can_edit? %>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+      Enable editing
+    </button>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+      Disable editing
+    </button>
 
-	<span class="edit-toggle">
-	  <%= link_to edit_assignment_path(@assignment.id)  do  
-		%><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
-		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button
-	  ><% end %>
-	  <%= link_to @assignment, method: :delete, data: {
-		  confirm: "Are you sure you want to delete this page?"} do  
-		%><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Assignment">
-		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
-		</button
-	  ><% end %>
-	</span>
-  <% end %>
+    <span class="edit-toggle">
+      <%= link_to edit_assignment_path(@assignment.id)  do  
+      %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      </button
+      ><% end %>
+      <%= link_to @assignment, method: :delete, data: {
+        confirm: "Are you sure you want to delete this page?"} do  
+      %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Assignment">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+      </button
+      ><% end %>
+    </span>
+    <% end %>
   </h1>
+
+  <h2><%= @assignment.course %> <%= @assignment.course_title %>, <%= @assignment.semester %></h2>
+
+  <%= link_to "See other versions of this assignment.",  assignment_group_path(@assignment.assignment_group) %>
+
   <div class="tags">
-	  <% if can_edit? %>
-		<span class="edit-toggle">
-		  <a href="<%= vertical_tag_index_path @assignment %>">
-			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
-			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-			</button>
-		  </a>
-		   <!-- got merged into ^^
-		   <%-# new_vertical_tag_path @assignment -%>
-		   -->
-		</span>
-	  <% end %>
-	  Tags:
-	  <%= render(partial: "tags/tag_badge", 
-		collection: sort_by(@assignment.tags, :text), as: :tag,
-		locals: {print_header: true, vertical: @assignment}) || 
-		"There are currently no tags associated with this assignment." %>
-	</div>
+    <% if can_edit? %>
+    <span class="edit-toggle">
+      <a href="<%= vertical_tag_index_path @assignment %>">
+      <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      </button>
+      </a>
+       <!-- got merged into ^^
+       <%-# new_vertical_tag_path @assignment -%>
+       -->
+    </span>
+    <% end %>
+    Tags:
+    <%= render(partial: "tags/tag_badge", 
+    collection: sort_by(@assignment.tags, :text), as: :tag,
+    locals: {print_header: true, vertical: @assignment}) || 
+    "<i>There are currently no tags associated with this assignment.</i>".html_safe %>
+  </div>
+  
+
   <div class="row">
     <div class="col-sm-9">
-	  <div class="row">
-	    <div class="col-sm-12 summary-wrapper">
-          <span class="summary"><%= @assignment.summary %></span>
-	    </div>
-	  </div>
-	  <div class="row">
-		  <div class="col-sm-12 description-wrapper">
-			<h2>Overview</h2>
-			<div class="description">
-				  <%= sanitize_text(@assignment.description).html_safe %>
-			</div>
-		  </div>
-	  </div>
-	</div>
-	<div class="col-sm-3">
-	  <div class="metadata-wrapper">
-		<!-- <h2>Metadata</h2> -->
-		<div class="metadata">
-		  <div class="row">
-			<div class="col">
-			  <b>Author: </b><span class="author"><%= @assignment.author %></span>
-			</div>
-		  </div>
-		  <div class="row">
-			<div class="col">
-			  <b>Learning curve: </b><span class="learning_curve"><%= @assignment.learning_curve %></span>
-			</div>
-		  </div>
-		  <div class="row">
-			<div class="col">
-			  <b>Expected instruction hours: </b><span class="instruction_hours"><%= @assignment.instruction_hours %></span>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	</div>
+
+      <%# Summary %>
+      <div class="row">
+        <div class="col-sm-12 summary-wrapper">
+            <span class="summary"><%= @assignment.assignment_group.summary %></span>
+        </div>
+      </div>
+
+      <%# Overview %>
+      <div class="row">
+        <div class="col-sm-12 description-wrapper">
+          <h2>Overview</h2>
+          <div class="description">
+              <%= sanitize_text(@assignment.assignment_group.description).html_safe %>
+          </div>
+        </div>
+      </div>
+
+      <%# Notes %>
+      <div class="row">
+        <div class="col-sm-12 notes-wrapper">
+          <h2>Notes</h2>
+          <div class="notes">
+              <%= sanitize_text(@assignment.notes.nil? ? "" : @assignment.notes).html_safe %>
+          </div>
+        </div>
+      </div>
+
+      <%# Outcome summary %>
+      <div class="row">
+        <div class="col-sm-12 outcome_summary-wrapper">
+          <h2>Outcome summary</h2>
+          <div class="outcome_summary">
+              <%= sanitize_text(@assignment.outcome_summary.nil? ? "" : @assignment.outcome_summary).html_safe %>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-sm-3">
+      <div class="metadata-wrapper">
+      <!-- <h2>Metadata</h2> -->
+        <div class="metadata">
+
+          <%# Authors %>
+          <div class="row">
+            <div class="col">
+
+              <% if @assignment.assignment_group.authors.size <= 1 %>
+                <b>Author:</b> 
+
+                <%# No authors (not good!!) %>
+                <% if @assignment.assignment_group.authors.size == 0 %>
+                  No author assigned!
+
+                <%# One author. %>
+                <% else %>
+                  <span class="author"><%= @assignment.assignment_group.authors.first.full_name %></span>
+                <% end %>
+
+              <%# Multiple authors. %>
+              <% else %>
+                <b>Authors:</b>
+                <ul class="authors">
+                  <% @assignment.assignment_group.authors.each do |author| %>
+                    <li><span class=\"author\"><%= author.full_name %></span></li>
+                  <% end %>
+                </ul>
+              <% end %>
+            </div>
+          </div>
+
+
+          <%# Instructors %>
+          <div class="row">
+            <div class="col">
+
+              <% if @assignment.instructors.size <= 1 %>
+                <b>Instructor:</b> 
+
+                <%# No instructor (not good!!) %>
+                <% if @assignment.instructors.size == 0 %>
+                  No instructor assigned!
+
+                <%# One instructdor. %>
+                <% else %>
+                  <span class="instructor"><%= @assignment.instructors.first.full_name %></span>
+                <% end %>
+
+              <%# Multiple instrucdtors. %>
+              <% else %>
+                <b>Instructors:</b>
+                <ul class="instructors">
+                  <% @assignment.instructors.each do |instructor| %>
+                    <li><span class=\"instructor\"><%= instructor.full_name %></span></li>
+                  <% end %>
+                </ul>
+              <% end %>
+            </div>
+          </div>
+
+          <%# Learning curve %>
+          <div class="row">
+            <div class="col">
+              <b>Learning curve: </b><span class="learning_curve"><%= @assignment.learning_curve %></span>
+            </div>
+          </div>
+          
+          <%# Instruction hours %>
+          <div class="row">
+            <div class="col">
+              <b>Expected instruction hours: </b><span class="instruction_hours"><%= @assignment.instruction_hours %></span>
+            </div>
+          </div>
+
+          <%# Field of study %>
+          <div class="row">
+            <div class="col">
+              <b>Field of study: </b><span class="field_of_study"><%= @assignment.field_of_study %></span>
+            </div>
+          </div>
+
+          <%# Project length %>
+          <div class="row">
+            <div class="col">
+              <b>Assignment duration (weeks): </b><span class="v"><%= @assignment.project_length_weeks %></span>
+            </div>
+          </div>
+
+          <%# Students given assignment %>
+          <div class="row">
+            <div class="col">
+              <b>Students given assignment: </b><span class="students_given_assignment"><%= @assignment.students_given_assignment %></span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 
   <hr>
   <h2 class="m-1">Materials</h2>
    
-   <div class="row">
-	  <div class="col-sm-4">
-	    <%= render(partial: "attachments/attachment_list",
-	    locals: { 
-		 vertical_from: @assignment, 
-		 data: @assignment.attachments,
-		 editable: true,
-		 title_tag: :h3 }) %>
-	  </div>
-	  <div class="col-sm-4">
-		<div class="web-resources">
-		<h3>From the web
-		  <% if can_edit? %>
-		    <span class="edit-toggle">
-			  <a href="<%= vertical_web_resource_index_path @assignment %>">
-			    <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
-				  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-				</button>
-			  </a>
-			  <!-- got merged into ^^
-			  <%-# new_vertical_web_resource_path @assignment -%>
-			  -->
-		    </span>
-		  <% end %>
-		</h3>
-		<ul>
-		  <%= render(partial: "web_resources/web_resource_list_item", 
-			collection: sort_by(@assignment.web_resources, :description), 
-			as: :web_resource, 
-			locals: {print_header: true, vertical: @assignment}) || 
-			"There are currently no web resources associated with this assignment." %>
-		</ul>
-	  </div>
-	 </div>
+  <div class="row">
     <div class="col-sm-4">
-	  <div class="assignment-results">
-	   <h3>Results
-			<% if can_edit? %>
-			  <span class="edit-toggle">
-				<a href="<%= new_assignment_assignment_result_path @assignment %>">
-				  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New result">
-				    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-				  </button>
-				</a>
-			  </span>
-			<% end %>
-		</h3>
-		<ul>
-		  <%= render(partial: "assignment_results/assignment_result_list_item", 
-			collection: sort_by(@assignment.assignment_results, :semester), 
-			as: :assignment_result, 
-			locals: {print_header: true, assignment: @assignment}) || 
-			"There are currently no results for this assignment." %>
-		</ul>
-	  </div>
+      <%= render(partial: "attachments/attachment_list",
+      locals: { 
+        vertical_from: @assignment, 
+        data: @assignment.attachments,
+        editable: true,
+        title_tag: :h3 }) %>
+    </div>
+    <div class="col-sm-4">
+      <div class="web-resources">
+        <h3>From the web
+          <% if can_edit? %>
+            <span class="edit-toggle">
+              <a href="<%= vertical_web_resource_index_path @assignment %>">
+                <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+              </button>
+              </a>
+              <!-- got merged into ^^
+              <%-# new_vertical_web_resource_path @assignment -%>
+              -->
+            </span>
+          <% end %>
+        </h3>
+        <ul>
+          <%= render(partial: "web_resources/web_resource_list_item", 
+            collection: sort_by(@assignment.web_resources, :description), 
+            as: :web_resource, 
+            locals: {print_header: true, vertical: @assignment}) || 
+            "There are currently no web resources associated with this assignment." %>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
    
    
   <hr>
   <div class="related-resources">
     <h2 class="m-1">Related</h2>
     <div class="row">
-     <div class="col-sm-4">
-		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Other assignments", 
-               vertical_from: @assignment, 
-               vertical_to: Assignment.new, 
-               data: @assignment.related_assignments,
-               editable: true,
-               title_tag: :h3 }) %>
+      <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/related_vertical",
+          locals: {title: "Other assignments", 
+                  vertical_from: @assignment, 
+                  vertical_to: Assignment.new, 
+                  data: @assignment.related_assignments,
+                  editable: true,
+                  title_tag: :h3 }) %>
 
-<!--     <button class="expand-all-resources">Expand all</button>
-    <button class="collapse-all-resources">Collapse all</button> -->
-	 </div>
-	 <div class="col-sm-4">
-		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Analyses", 
-               vertical_from: @assignment, 
-               vertical_to: Analysis.new, 
-               editable: true,
-               title_tag: :h3  }) %>
-	 </div>
-	 <div class="col-sm-4">
-		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Software", 
-               vertical_from: @assignment, 
-               vertical_to: Software.new, 
-               editable: true,
-               title_tag: :h3  }) %>
-	 </div>
-   </div>
+  <!--     <button class="expand-all-resources">Expand all</button>
+      <button class="collapse-all-resources">Collapse all</button> -->
+      </div>
+
+      <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/related_vertical",
+          locals: {title: "Analyses", 
+                  vertical_from: @assignment, 
+                  vertical_to: Analysis.new, 
+                  editable: true,
+                  title_tag: :h3  }) %>
+      </div>
+
+      <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/related_vertical",
+          locals: {title: "Software", 
+                  vertical_from: @assignment, 
+                  vertical_to: Software.new, 
+                  editable: true,
+                  title_tag: :h3  }) %>
+      </div>
+
+    </div>
    
-   <div class="row">
-     <div class="col-sm-4">
-		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Datasets", 
-               vertical_from: @assignment, 
-               vertical_to: Dataset.new, 
-               editable: true,
-               title_tag: :h3 }) %>
-	 </div>
-	 <div class="col-sm-4">
-		<%= render(partial: "examples/related_examples",
-      locals: {title: "Examples", 
-               vertical: @assignment, 
-               editable: true,
-               title_tag: :h3 }) %>
-	 </div>
-   </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <%= render(partial: "verticals_shared/related_vertical",
+          locals: {title: "Datasets", 
+                  vertical_from: @assignment, 
+                  vertical_to: Dataset.new, 
+                  editable: true,
+                  title_tag: :h3 }) %>
+      </div>
+
+      <div class="col-sm-4">
+        <%= render(partial: "examples/related_examples",
+          locals: {title: "Examples", 
+                  vertical: @assignment, 
+                  editable: true,
+                  title_tag: :h3 }) %>
+      </div>
+
+    </div>
   </div>
 
 
 
-  </div>
 </div>
 
