Modified routes so assignment URIs include their group ids as well; updated controller tests to handle these changes.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -40,6 +40,13 @@
     font-weight: bold;
     color: #555;
   }
+  .instructor {
+
+  }
+  .course {
+    font-weight: bold;
+    color: #555;
+  }
 
   .date {
   }
