--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -2,18 +2,21 @@
 <div class="container">
 
   <h1>Assignments
-
+<% if false %>
   <% if can_edit? %>
-    <%= link_to(new_assignment_path) do 
+    <%= link_to(new_assignment_group_assignment_path) do 
       %>
 	  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Assignment">
 		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	  </button>
     <% end %>
   <% end %>
+<% end %>
   </h1>
   <div id="assignment-entries" class="entries">
-    <%= render @assignments %>
+    <%# render @assignments %>
+    <%= render(partial: "assignment_index_item", 
+    collection: @assignments, as: :assignment) %>
   </div>
 
 </div>
