--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid assignment-page" data-assignment-id="<%= @assignment.id %>">
-  <h2>Version:  <%= @assignment.course %> <%= @assignment.course_title %>, <%= @assignment.semester %></h2>
+  <h1><%= @assignment.course %> <%= @assignment.course_title %>, <%= @assignment.semester %></h1>
 
   <%# link_to "See other versions of this assignment.",  assignment_group_path(@assignment.assignment_group) %>
 
