--- a/app/views/assignments/_assignment_list_item.html.erb
+++ b/app/views/assignments/_assignment_list_item.html.erb
@@ -1,34 +1,47 @@
-<div class="resource vertical-li">
+<%#
+Parameters:
+  - assignment (current assignment)
+  - assignment_group
+  - target_assignment_id (id of the assignment to highlight; "" if none)
+
+%>
+<li class="resource vertical-li assignment-list-item <%= "selected" if assignment.id == target_assignment_id %>">
 
   <% if false %>
-  <% if can_edit? %>
-    <span class="edit-toggle">
-	  <%= form_for(assignment, method: :get,
-        url: edit_assignment_path(assignment),
-        html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-        </button>
-      <% end %>
-      <%= form_for(assignment, method: :delete,
-          url: assignment_path(assignment), 
-          html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete">
-          <span class="glyphicon glyphicon-remove x-btn" aria-hidden="true"></span> 
-        </button>
-      <% end %>
-    </span>
-  <% end %>
+          <% if can_edit? %>
+            <span class="edit-toggle">
+            <%= form_for(assignment, method: :get,
+                url: edit_assignment_path(assignment),
+                html: {class: "inline"}) do |f| %>
+                <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit">
+                  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </button>
+              <% end %>
+              <%= form_for(assignment, method: :delete,
+                  url: assignment_path(assignment), 
+                  html: {class: "inline"}) do |f| %>
+                <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete">
+                  <span class="glyphicon glyphicon-remove x-btn" aria-hidden="true"></span> 
+                </button>
+              <% end %>
+            </span>
+          <% end %>
   <% end %>
   
-  <%= link_to assignment_path(assignment) do %>
-  <span class="name"><%= assignment.full_title %> 
-    <%# Gives us a list of instructors like this:
-      Single instructor:         Jones
-      Two instructors:           Smith & Jones
-      Three or more instructors: Jahn, Mutton, & Smith
-    %>
-    (<%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %>,
-    <%= assignment.semester %>)</span>
+  <% if assignment.id == target_assignment_id %>
+    <span class="name"><%= assignment.full_title %> 
+      (<%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %>,
+      <%= assignment.semester %>)</span>
+  <% else %>
+    <%= link_to assignment_path(assignment) do %>
+      <span class="name"><%= assignment.full_title %> 
+        <%# Gives us a list of instructors like this:
+          Single instructor:         Jones
+          Two instructors:           Smith & Jones
+          Three or more instructors: Jahn, Mutton, & Smith
+        %>
+        (<%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %>,
+        <%= assignment.semester %>)</span>
+    <% end %>
   <% end %>
 </li>
