--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -4,14 +4,14 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <p class="instructions">
-      Please enter your username and a password reset link will be sent to the
-      email on file for that account.
+      Please enter your email and a password reset link will be sent for the
+      matching account if one is found.
     </p>
 
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
       <div class="form-group">
-        <%= f.label :username %>
-        <%= f.text_field :username, class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.text_field :email, class: 'form-control' %>
       </div>
       
       <%= f.submit "Submit", class: "btn btn-primary" %>
