Added front-end support to add authors to assignment groups.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "jquery-ui/sortable";
+@import "jquery-ui/autocomplete";
 @import "jquery-ui/theme";
 @import "bootstrap-sprockets";
 @import "bootstrap";
